fixed search size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ section.now-playing-upcoming {
 
 /* Search */
 .search {
-	padding: 60px;
+	padding: 50px;
 	margin-bottom: 40px;
 }
 
